# halo2-scaffold

./: Cargo.toml  README.md
examples/: halo2_lib.rs
src/: my_circuit.rs
