[package]
name = "halo2-scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }

# halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22" }

# Axiom's helper API with basic functions 
halo2_base = { git = "ssh://github.com/axiom-crypto/halo2-lib-working.git", branch = "experiment/optimizations", package = "halo2_base",  default-features = false, features = ["halo2-pse"] }

[features]
default = []

[profile.dev]
opt-level = 3

[profile.release]
debug = true
opt-level = 3
lto = "thin" 
codegen-unit=1
panic = "abort"
